Add paperclip to views

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,10 @@
 <p>
+  <% if @photo.image %>
+    <%= image_tag @photo.image.url(:medium) %>
+  <% end %>
+</p>
+
+<p>
   <strong>Title:</strong>
   <%= @photo.location %>
 </p>
