--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,9 @@
-<%= form_for @photo do |form| %>
+<%= form_for @photo, html: { multipart: true } do |form| %>
+  <p>
+    <%= form.label :image %><br>
+    <%= form.file_field :image %>
+  </p>
+  
   <p>
     <%= form.label :location %><br>
     <%= form.text_field :location %>
