- Add photo to index.html.erb - Change index action in photos_controller - Add "back" link to show.html.erb

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,1 +1,22 @@
-Photos Index
+<h1>Listing articles</h1>
+
+<p><%= link_to 'New', new_photo_path() %></p>
+ 
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Text</th>
+  </tr>
+ 
+  <% @photos.each do |photo| %>
+    <tr>
+    <% if photo.image %>
+        <td><%= image_tag photo.image.url(:medium) %></td>
+    <% end %>
+      
+      <td><%= photo.location %></td>
+      <td><%= photo.description %></td>
+      <td><%= link_to 'Show', photo_path(photo) %></td>
+    </tr>
+  <% end %>
+</table>
