fix links in _footer.html.erb partial and add conditional for show action

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="footer__wrapper">
         <div class="footer-navigation__links">
-            <a href="" class="footer-navigation__links__item">Contact</a>
-            <a href="show-all.html" class="footer-navigation__links__item footer-navigation__links__item--last">See More</a>
+            <a href="#" class="footer-navigation__links__item">Contact</a>
+            <%= link_to 'See More', photos_path, class: 'footer-navigation__links__item footer-navigation__links__item--last' %>
         </div>
     </div>
 </footer>
