- Configure bootstrap gem and bootstrap_form gem - Add bootstrap_form to edit and new views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,14 @@
+/*
+ *= require rails_bootstrap_forms
+ */
+
 // Base 
 @import 'base/normalize';
 @import 'base/variables';
 @import 'base/mixins';
 @import 'base/base';
 @import 'base/typography';
+@import 'bootstrap';
 
 // Components
 @import 'components/navigation';
