- Added bootsrapt grid layout to form views - Fixed styling with links in footer and navigation partial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import 'bootstrap';
 
 // Components
+@import 'components/form';
 @import 'components/navigation';
 @import 'components/footer';
 @import 'components/feed';
