Added edit_user_registration_path link to navigation

--- a/app/assets/stylesheets/components/_navigation.scss
+++ b/app/assets/stylesheets/components/_navigation.scss
@@ -28,6 +28,8 @@
 
     // .naivgation__links 
     &__links {
+        @include flex(center, flex-start);
+
         // .navigation__links__item
         &__item {
             margin-right: 2rem;
@@ -45,4 +47,12 @@
             }
         }
     }
+}
+
+.hori-divider {
+    width: 1px;
+    height: 1.25rem;
+    opacity: 0.5;
+    background: $secondary-text;
+    margin-right: 1.5rem;
 }
