--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,20 +1,26 @@
-<%= form_for @photo, html: { multipart: true } do |form| %>
-  <p>
-    <%= form.label :image %><br>
-    <%= form.file_field :image %>
-  </p>
-  
-  <p>
-    <%= form.label :location %><br>
-    <%= form.text_field :location %>
-  </p>
- 
-  <p>
-    <%= form.label :description %><br>
-    <%= form.text_area :description %>
-  </p>
- 
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<div class="container user-form">
+  <div class="row justify-content-center">
+    <div class="col-sm-10 col-md-6">
+     <%= bootstrap_form_for @photo, html: { multipart: true } do |f| %>
+
+        <div class="field">
+          <%= f.file_field :image %>
+        </div>
+
+        <div class="field">
+          <%= f.text_field :location %>
+        </div>
+
+        <div class="field">
+          <%= f.text_field :description %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit 'Upload' , class: 'btn btn-secondary btn-block' %>
+        </div>
+        
+      <% end %>
+    </div>
+  </div>
+</div>
+
