Refactor bootstrap form to _form.html.erb partail

--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,3 +1,9 @@
-Edit Photo
+<div class="container user-form">
+  <div class="row justify-content-center">
+    <h2>Edit Photo</h2>
+  </div>
+  <div class="row justify-content-center">
+      <%= render 'form' %> 
+  </div>
+</div>
 
-<%= render 'form' %>
