--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,26 +1,22 @@
-<div class="container user-form">
-  <div class="row justify-content-center">
-    <div class="col-sm-10 col-md-6">
-     <%= bootstrap_form_for @photo, html: { multipart: true } do |f| %>
+<div class="col-sm-10 col-md-6">
+  <%= bootstrap_form_for @photo, html: { multipart: true } do |f| %>
 
-        <div class="field">
-          <%= f.file_field :image %>
-        </div>
-
-        <div class="field">
-          <%= f.text_field :location %>
-        </div>
-
-        <div class="field">
-          <%= f.text_field :description %>
-        </div>
-
-        <div class="actions">
-          <%= f.submit 'Upload' , class: 'btn btn-secondary btn-block' %>
-        </div>
-        
-      <% end %>
+    <div class="field">
+      <%= f.file_field :image %>
     </div>
-  </div>
+
+    <div class="field">
+      <%= f.text_field :location %>
+    </div>
+
+    <div class="field">
+      <%= f.text_area :description %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit 'Upload' , class: 'btn btn-secondary btn-block' %>
+    </div>
+    
+  <% end %>
 </div>
 
