--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,3 +1,9 @@
-New Photo
+<div class="container user-form">
+  <div class="row justify-content-center">
+    <h2>Upload Photo</h2>
+  </div>
+  <div class="row justify-content-center">
+      <%= render 'form' %> 
+  </div>
+</div>
 
-<%= render 'form' %>
