--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    pointer-events: none;
 
     // .footer__wrapper
     &__wrapper {
@@ -19,6 +20,7 @@
         &__item {
             margin-right: 2rem;
             color: $secondary-text;
+            pointer-events: auto;
             transition: 200ms;
 
             &:hover {
