--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -6,10 +6,51 @@
         width: 100%;
         max-width: 1100px;
         margin: 0 auto;
+        padding-bottom: 5rem;
 
         img {
             width: 100%;
             height: auto;
+            margin-bottom: 1.5rem;
+        }
+
+        a {
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
+
+    &__location {
+        width: 100%;
+        text-align: center;
+        padding: 1rem;
+    }
+    
+    &__description {
+        width: 75%;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 0.5rem;
+        text-align: center;
+    }
+}
+
+.photo__control {
+    @include flex(center, center);
+    margin-bottom: 1rem;
+    
+    a:not(:last-child) {
+        margin-right: 1.5rem;
+
+    }
+
+    &--delete {
+        color: red; 
+
+        &:hover {
+            color: red;
+        }
+    }
+
 }
