Configure feather icons into view

--- a/app/assets/stylesheets/components/_navigation.scss
+++ b/app/assets/stylesheets/components/_navigation.scss
@@ -5,6 +5,10 @@
     width: 100%;
     pointer-events: none;
 
+    a {
+        pointer-events: auto;
+    }
+
     // .navigation__wrapper
     &__wrapper {
         @include flex(center, space-between);
